--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,34 @@
-.pyc
-.vscode
-__pycache__
-.DS_Store
-.idea
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Jupyter Notebook
 .ipynb_checkpoints
 notebooks
+
+# others
+.DS_Store
+.idea
+.pyc
+.vscode
